[package]

name = "xlru-cache"
version = "0.1.2"
license = "MIT/Apache-2.0"
description = "A cache that holds a limited number of key-value pairs"
authors = [
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
]

repository = "https://github.com/jedisct1/lru-cache"
homepage = "https://github.com/jedisct1/lru-cache"
documentation = "https://docs.rs/xlru_cache"
keywords = ["data-structures"]
readme = "README.md"
exclude = ["/.travis.yml", "/deploy-docs.sh"]

[features]
heapsize_impl = ["heapsize", "linked-hash-map/heapsize_impl"]

[dependencies]
linked-hash-map = "0.5"

heapsize = { version = "0.4", optional = true }
